--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Marvel Heroes</title>
+	<title>Heroes Finder</title>
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="css/screen.css">
 </head>
