--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 <body>
 	
 	<header>
-		
+		<div class="width-container">
+			<div>
+				<img id="marvel-logo" src="img/logos/marvel-logo-s.png" alt="Marvel logo">
+			</div>
+		</div>
 	</header>
 	<main>
-		<section id="characters">
-			<h2>Characters</h2>
-		</section>
-		<section id="favourites">
-			<h2>My favourites</h2>
-		</section>
+		<div class="width-container">
+			<section id="characters">
+				<h2>Characters</h2>
+			</section>
+			<section id="favourites">
+				<h2>My favourites</h2>
+			</section>
+		</div>
 	</main>
 	<footer>
 		
