--- a/index.html
+++ b/index.html
@@ -9,24 +9,41 @@
 <body>
 	
 	<header>
-		<div class="width-container">
-			<div>
-				<img id="marvel-logo" src="img/logos/marvel-logo-s.png" alt="Marvel logo">
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<img id="marvel-logo" src="img/logos/marvel-logo-s.png" alt="Marvel logo">
+				</div>
 			</div>
 		</div>
 	</header>
 	<main>
-		<div class="width-container">
-			<section id="characters">
-				<h2>Characters</h2>
-			</section>
-			<section id="favourites">
-				<h2>My favourites</h2>
-			</section>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<section id="characters">
+						<h2>Characters</h2>
+					</section>
+				</div>
+				<div class="col">
+					<section id="favourites">
+						<h2>My favourites</h2>
+					</section>
+				</div>
+			</div>
 		</div>
 	</main>
 	<footer>
-		
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<p>Grability 2016. Todos los derechos reservados</p>
+				</div>
+				<div class="col grability-logo-container">
+					<img id="grability-logo" src="img/logos/grability-logo.png" alt="Grability logo">
+				</div>
+			</div>
+		</div>
 	</footer>
 
 </body>
