--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 				<div class="col">
 					<img id="marvel-logo" src="img/logos/marvel-logo-s.png" alt="Marvel logo">
 				</div>
+				<div class="col">
+					<div class="search">
+						<input type="text" placeholder="Search character...">
+						<button>
+							<img src="img/icons/search.png" alt="Search icon">		
+						</button>
+					</div>
+				</div>
 			</div>
 		</div>
 	</header>
