--- a/index.html
+++ b/index.html
@@ -30,7 +30,109 @@
 			<div class="row">
 				<div class="col">
 					<section id="characters">
-						<h2>Characters</h2>
+						<div class="row">
+							<div class="col">
+								<h2>Characters</h2>
+							</div>
+						</div>
+						<div class="row characters-container">
+							<div class="col character-container">
+								<section class="character">
+									<div class="row">
+										<div class="col">
+											<img src="img/wireframes/characters/character-s.jpg" alt="Character">
+										</div>
+										<div class="col">
+											<h3>Spider-Man</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam atque tenetur voluptatem.</p>
+											<button>View more</button>
+										</div>
+									</div>
+									<div class="related-comics">
+										<h4>Related comics</h4>
+										<ul class="row">
+											<li class="col">Comic 1</li>
+											<li class="col">Comic 2</li>
+											<li class="col">Comic 3</li>
+											<li class="col">Comic 4</li>
+										</ul>
+									</div>
+								</section>
+							</div>
+
+							<div class="col character-container">
+								<section class="character">
+									<div class="row">
+										<div class="col">
+											<img src="img/wireframes/characters/character-s.jpg" alt="Character">
+										</div>
+										<div class="col">
+											<h3>Spider-Man</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam atque tenetur voluptatem.</p>
+											<button>View more</button>
+										</div>
+									</div>
+									<div class="related-comics">
+										<h4>Related comics</h4>
+										<ul class="row">
+											<li class="col">Comic 1</li>
+											<li class="col">Comic 2</li>
+											<li class="col">Comic 3</li>
+											<li class="col">Comic 4</li>
+										</ul>
+									</div>
+								</section>
+							</div>
+
+							<div class="col character-container">
+								<section class="character">
+									<div class="row">
+										<div class="col">
+											<img src="img/wireframes/characters/character-s.jpg" alt="Character">
+										</div>
+										<div class="col">
+											<h3>Spider-Man</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam atque tenetur voluptatem.</p>
+											<button>View more</button>
+										</div>
+									</div>
+									<div class="related-comics">
+										<h4>Related comics</h4>
+										<ul class="row">
+											<li class="col">Comic 1</li>
+											<li class="col">Comic 2</li>
+											<li class="col">Comic 3</li>
+											<li class="col">Comic 4</li>
+										</ul>
+									</div>
+								</section>
+							</div>
+
+							<div class="col character-container">
+								<section class="character">
+									<div class="row">
+										<div class="col">
+											<img src="img/wireframes/characters/character-s.jpg" alt="Character">
+										</div>
+										<div class="col">
+											<h3>Spider-Man</h3>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam atque tenetur voluptatem.</p>
+											<button>View more</button>
+										</div>
+									</div>
+									<div class="related-comics">
+										<h4>Related comics</h4>
+										<ul class="row">
+											<li class="col">Comic 1</li>
+											<li class="col">Comic 2</li>
+											<li class="col">Comic 3</li>
+											<li class="col">Comic 4</li>
+										</ul>
+									</div>
+								</section>
+							</div>
+							
+						</div>
 					</section>
 				</div>
 				<div class="col">
