--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 								<h2>Characters</h2>
 							</div>
 						</div>
-						<div class="row characters-container">
-							<div class="col character-container">
+						<ul class="row characters-container">
+							<li class="col character-container">
 								<section class="character">
 									<div class="row">
 										<div class="col">
@@ -44,7 +44,7 @@
 										</div>
 										<div class="col">
 											<h3>Spider-Man</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam atque tenetur voluptatem.</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam.</p>
 											<button>View more</button>
 										</div>
 									</div>
@@ -58,9 +58,9 @@
 										</ul>
 									</div>
 								</section>
-							</div>
+							</li>
 
-							<div class="col character-container">
+							<li class="col character-container">
 								<section class="character">
 									<div class="row">
 										<div class="col">
@@ -68,7 +68,7 @@
 										</div>
 										<div class="col">
 											<h3>Spider-Man</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam atque tenetur voluptatem.</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam.</p>
 											<button>View more</button>
 										</div>
 									</div>
@@ -82,9 +82,9 @@
 										</ul>
 									</div>
 								</section>
-							</div>
+							</li>
 
-							<div class="col character-container">
+							<li class="col character-container">
 								<section class="character">
 									<div class="row">
 										<div class="col">
@@ -92,7 +92,7 @@
 										</div>
 										<div class="col">
 											<h3>Spider-Man</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam atque tenetur voluptatem.</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam.</p>
 											<button>View more</button>
 										</div>
 									</div>
@@ -106,9 +106,9 @@
 										</ul>
 									</div>
 								</section>
-							</div>
+							</li>
 
-							<div class="col character-container">
+							<li class="col character-container">
 								<section class="character">
 									<div class="row">
 										<div class="col">
@@ -116,7 +116,7 @@
 										</div>
 										<div class="col">
 											<h3>Spider-Man</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam atque tenetur voluptatem.</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam.</p>
 											<button>View more</button>
 										</div>
 									</div>
@@ -130,14 +130,26 @@
 										</ul>
 									</div>
 								</section>
-							</div>
+							</li>
 							
-						</div>
+						</ul>
 					</section>
 				</div>
 				<div class="col">
 					<section id="favourites">
 						<h2>My favourites</h2>
+						<ul class="comics-container">
+							<li class="comic">
+								<a href="#"><img class="delete" src="img/icons/btn-delete.png" alt="Delete button"></a>
+								<img class="cover" src="img/wireframes/comics/comic.jpg" alt="Comic cover">
+								<h3>The comic title</h3>
+							</li>
+							<li class="comic">
+								<a href="#"><img class="delete" src="img/icons/btn-delete.png" alt="Delete button"></a>
+								<img class="cover" src="img/wireframes/comics/comic.jpg" alt="Comic cover">
+								<h3>The comic title</h3>
+							</li>
+						</ul>
 					</section>
 				</div>
 			</div>
