Detalles de comic

--- a/index.html
+++ b/index.html
@@ -168,5 +168,24 @@
 		</div>
 	</footer>
 
+	<div class="lightbox">
+		<div class="comic-details">
+			<a class="close-button" href="#"><img src="img/icons/btn-close.png" alt="Close button"></a>
+			<section class="content">
+				<div>
+					<img src="img/wireframes/comics/comic.jpg" alt="Comic cover">
+				</div>
+				<div class="text">
+					<h2>The comic title</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse unde fuga aliquam dignissimos, maxime, quod voluptatem aspernatur quaerat suscipit sequi quibusdam dolor sapiente cum ea, natus qui vel doloremque nemo!</p>
+				</div>
+			</section>
+			<ul class="buttons">
+				<li><button class="add-button">Add to favourites</button></li>
+				<li><button class="buy-button">Buy for $3.99</button></li>
+			</ul>
+		</div>
+	</div>
+
 </body>
 </html>
