--- a/index.html
+++ b/index.html
@@ -133,6 +133,21 @@
 							</li>
 							
 						</ul>
+
+						<ul class="pagination">
+							<li class="arrow left-arrow">
+								<a href="#"><img src="img/icons/btn_arrow_left.png" alt="Left arrow"></a>
+							</li>
+							<li class="page"><a href="#">1</a></li>
+							<li class="page"><a href="#">2</a></li>
+							<li class="page"><a href="#">3</a></li>
+							<li class="page"><a href="#">4</a></li>
+							<li class="page"><a href="#">5</a></li>
+							<li class="page"><a href="#">...</a></li>
+							<li class="arrow right-arrow">
+								<a href="#"><img src="img/icons/btn_arrow_right.png" alt="Left arrow"></a>
+							</li>
+						</ul>
 					</section>
 				</div>
 				<div class="col">
