--- a/index.html
+++ b/index.html
@@ -36,101 +36,8 @@
 							</div>
 						</div>
 						<ul class="row characters-container">
-							<li class="col character-container">
-								<section class="character">
-									<div class="row">
-										<div class="col">
-											<img src="img/wireframes/characters/character-s.jpg" alt="Character">
-										</div>
-										<div class="col">
-											<h3>Spider-Man</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam.</p>
-											<button>View more</button>
-										</div>
-									</div>
-									<div class="related-comics">
-										<h4>Related comics</h4>
-										<ul class="row">
-											<li class="col">Comic 1</li>
-											<li class="col">Comic 2</li>
-											<li class="col">Comic 3</li>
-											<li class="col">Comic 4</li>
-										</ul>
-									</div>
-								</section>
-							</li>
 
-							<li class="col character-container">
-								<section class="character">
-									<div class="row">
-										<div class="col">
-											<img src="img/wireframes/characters/character-s.jpg" alt="Character">
-										</div>
-										<div class="col">
-											<h3>Spider-Man</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam.</p>
-											<button>View more</button>
-										</div>
-									</div>
-									<div class="related-comics">
-										<h4>Related comics</h4>
-										<ul class="row">
-											<li class="col">Comic 1</li>
-											<li class="col">Comic 2</li>
-											<li class="col">Comic 3</li>
-											<li class="col">Comic 4</li>
-										</ul>
-									</div>
-								</section>
-							</li>
-
-							<li class="col character-container">
-								<section class="character">
-									<div class="row">
-										<div class="col">
-											<img src="img/wireframes/characters/character-s.jpg" alt="Character">
-										</div>
-										<div class="col">
-											<h3>Spider-Man</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam.</p>
-											<button>View more</button>
-										</div>
-									</div>
-									<div class="related-comics">
-										<h4>Related comics</h4>
-										<ul class="row">
-											<li class="col">Comic 1</li>
-											<li class="col">Comic 2</li>
-											<li class="col">Comic 3</li>
-											<li class="col">Comic 4</li>
-										</ul>
-									</div>
-								</section>
-							</li>
-
-							<li class="col character-container">
-								<section class="character">
-									<div class="row">
-										<div class="col">
-											<img src="img/wireframes/characters/character-s.jpg" alt="Character">
-										</div>
-										<div class="col">
-											<h3>Spider-Man</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta soluta placeat saepe sunt atque, fugiat eius? Vero cumque dolorum, minus fugit veritatis recusandae tempora dolores voluptatibus, laboriosam.</p>
-											<button>View more</button>
-										</div>
-									</div>
-									<div class="related-comics">
-										<h4>Related comics</h4>
-										<ul class="row">
-											<li class="col">Comic 1</li>
-											<li class="col">Comic 2</li>
-											<li class="col">Comic 3</li>
-											<li class="col">Comic 4</li>
-										</ul>
-									</div>
-								</section>
-							</li>
+							
 							
 						</ul>
 
@@ -201,6 +108,9 @@
 			</ul>
 		</div>
 	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="js/characters.js"></script>
 
 </body>
 </html>
