Busca personajes por los caracteres iniciales de su nombre

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 				</div>
 				<div class="col">
 					<div class="search">
-						<input type="text" placeholder="Search character...">
-						<button>
+						<input id="search-input" type="text" placeholder="Search character...">
+						<button id="search-button">
 							<img src="img/icons/search.png" alt="Search icon">		
 						</button>
 					</div>
@@ -35,9 +35,8 @@
 								<h2>Characters</h2>
 							</div>
 						</div>
-						<ul class="row characters-container">
 
-							
+						<ul class="row characters-container">
 							
 						</ul>
 
