Ordena los resultados por nombre o por fecha de modificación

--- a/index.html
+++ b/index.html
@@ -30,9 +30,18 @@
 			<div class="row">
 				<div class="col">
 					<section id="characters">
-						<div class="row">
+						<div class="row characters-top">
 							<div class="col">
 								<h2>Characters</h2>
+							</div>
+							<div class="col sort-by-container">
+								<select name="order" id="sort-by">
+									<option value="">Sort by</option>
+									<option value="name">Name A-Z</option>
+									<option value="-name">Name Z-A</option>
+									<option value="-modified">Modified recent</option>
+									<option value="modified">Modified old</option>
+								</select>
 							</div>
 						</div>
 
